--- a/spring-mydemo/build.gradle
+++ b/spring-mydemo/build.gradle
@@ -15,6 +15,9 @@ dependencies {
     compile(project(":spring-beans"))
     compile(project(":spring-context"))
     compile(project(":spring-core"))
+    compile(project(":spring-aspects"))
+    compile(project(":spring-aop"))
+    compile(project(":spring-oxm"))
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
